# Infra

./: .dockerignore  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  TODO.md  high_end_gpu_and_cluster_inference_practice.md  pyproject.toml  rtx4060_llm_inference_acceleration_roadmap.md
cloud/: README.md
cloud/lambda/: README.md
cloud/modal/: README.md
cloud/runpod/: README.md
cloud/vastai/: README.md
cluster/: README.md
cluster/kubernetes/: README.md
cluster/local-sim/: README.md
cluster/multi-gpu/: README.md
cluster/slurm/: README.md
configs/: README.md
configs/benchmarks/: README.md  smoke.jsonl
configs/benchmarks/cases/: long_context.jsonl  long_output.jsonl  mixed.jsonl  short_chat.jsonl
configs/hardware/: README.md
configs/serving/: trtllm-single-gpu.env
docs/: README.md  qwen-trtllm-models.md  references.md  trtllm-optimization-roadmap.md  trtllm-quality-workflow.md  trtllm-runbook.md  trtllm-serving-notes.md
docs/devlogs/: 2026-07-06-python-env-setup.md
experiments/: README.md
experiments/01_rtx4060_baseline/: README.md  commands.md  notes.md
experiments/02_quantization_comparison/: README.md  commands.md  notes.md
experiments/03_kv_cache_long_context/: README.md  commands.md  notes.md
experiments/04_speculative_decoding/: README.md  commands.md  notes.md
experiments/05_cloud_single_gpu/: README.md  commands.md  notes.md
experiments/06_multi_gpu_serving/: README.md  commands.md  notes.md
experiments/07_cuda_kernels/: README.md
experiments/trtllm/: README.md
prompts/: README.md  basic_cn_qa.txt  code_completion.txt  long_context_summary.txt
results/: README.md
scripts/: README.md  app.py  capture_quality_outputs.py  chat.py  check_project.sh  collect_env.sh  compare_quality_outputs.py  download_models.py  make_benchmark_dataset.py  profile_trtllm_loop.sh  run_local_smoke.sh  summarize_trtllm_json.py  trtllm.sh  trtllm_smoke.sh
src/: README.md
