[project]
name = "infra"
version = "0.1.0"
description = "TensorRT-LLM serving infrastructure for single-GPU and cluster inference"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "ipython>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["src"]
